manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: helloworld
  name: helloworld
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: helloworld
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
